--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-markdown: rdiscount
+markdown: redcarpet
 pygments: true
 permalink: /posts/:title
 auto: true
-rdiscount:
+redcarpet:
   extensions: [smart]
